add new website from server na

--- a/xem-phim-bo/than-an-vuong-toa/index.html
+++ b/xem-phim-bo/than-an-vuong-toa/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1660,18 +1660,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/viral" title="Viral">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-pho-sac-mau-cua-charlie-phan-3" title="Thành phố sắc màu của Charlie (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/viral-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-pho-sac-mau-cua-charlie-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Viral
+             Thành phố sắc màu của Charlie (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Viral
+             Charlie's Colorforms City (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1682,18 +1682,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/huy-ket-ban" title="Hủy Kết Bạn">
+          <a class="list-top-movie-link" href="/phim-moi/hoc-vien-sieu-anh-hung-memories" title="Học Viện Siêu Anh Hùng: Memories">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huy-ket-ban-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoc-vien-sieu-anh-hung-memories-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hủy Kết Bạn
+             Học Viện Siêu Anh Hùng: Memories
             </span>
             <span class="list-top-movie-item-en">
-             Unfriended
+             Boku no Hero Academia: Memories
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1704,18 +1704,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vo-duong-cobra-kai-phan-5" title="Võ đường Cobra Kai (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/canh-sat-thep" title="Cảnh Sát Thép">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-duong-cobra-kai-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-sat-thep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Võ đường Cobra Kai (Phần 5)
+             Cảnh Sát Thép
             </span>
             <span class="list-top-movie-item-en">
-             Cobra Kai (Season 5)
+             Thiết Thám
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1726,18 +1726,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/iboy" title="iBOY">
+          <a class="list-top-movie-link" href="/phim-moi/ngoi-lang-ma" title="Ngôi Làng Ma">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/iboy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-lang-ma-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             iBOY
+             Ngôi Làng Ma
             </span>
             <span class="list-top-movie-item-en">
-             iBOY
+             The Black Death
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1748,18 +1748,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giac-mong-phieu-luu" title="Giấc Mộng Phiêu Lưu">
+          <a class="list-top-movie-link" href="/phim-moi/kiem-anh-diep-huyet" title="Kiếm Ảnh Điệp Huyết">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giac-mong-phieu-luu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kiem-anh-diep-huyet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giấc Mộng Phiêu Lưu
+             Kiếm Ảnh Điệp Huyết
             </span>
             <span class="list-top-movie-item-en">
-             Adventures On The Red Plane
+             The blood in the swords' shadow
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
