--- a/xem-phim-bo/chien-quoc-thien-nien/index.html
+++ b/xem-phim-bo/chien-quoc-thien-nien/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/scarecrows" title="Scarecrows">
+          <a class="list-top-movie-link" href="/phim-moi/the-dissident" title="The Dissident">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/scarecrows-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-dissident-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Scarecrows
+             The Dissident
             </span>
             <span class="list-top-movie-item-en">
-             Scarecrows
+             The Dissident
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1681,21 +1681,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba" title="Hùng Long Phong Bá">
+          <a class="list-top-movie-link" href="/phim-moi/mot-ro-khau-nghiep" title="Một rổ khẩu nghiệp">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-ro-khau-nghiep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá
+             Một rổ khẩu nghiệp
             </span>
             <span class="list-top-movie-item-en">
-             Brothers For Life
+             Hoops
             </span>
             <span class="list-top-movie-item-view">
-             15 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1703,18 +1703,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-nhat-duoc-1-co-gai-va-bien-co-ay-tro-thanh-nguoi-hanh-phuc-nhat-the-gian" title="Tôi Nhặt Được 1 Cô Gái Và Biến Cô Ấy Trở Thành Người Hạnh Phúc Nhất Thế Gian!">
+          <a class="list-top-movie-link" href="/phim-moi/yeu-than-tuong-phan-1" title="Yêu Thần Tượng Phần 1">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-nhat-duoc-1-co-gai-va-bien-co-ay-tro-thanh-nguoi-hanh-phuc-nhat-the-gian-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-than-tuong-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tôi Nhặt Được 1 Cô Gái Và Biến Cô Ấy Trở Thành Người Hạnh Phúc Nhất Thế Gian!
+             Yêu Thần Tượng Phần 1
             </span>
             <span class="list-top-movie-item-en">
-             Tôi Nhặt Được 1 Cô Gái Và Biến Cô Ấy Trở Thành Người Hạnh Phúc Nhất Thế Gian!
+             Yêu Thần Tượng Phần 1
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1725,18 +1725,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/drug-addiction" title="Drug Addiction">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-cha-tuyet-voi-2" title="Người Cha Tuyệt Vời">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/drug-addiction-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-cha-tuyet-voi-2001-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Drug Addiction
+             Người Cha Tuyệt Vời
             </span>
             <span class="list-top-movie-item-en">
-             Drug Addiction
+             The Family Man
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1747,18 +1747,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-sinh-tu" title="Cuộc Chiến Sinh Tử">
+          <a class="list-top-movie-link" href="/phim-moi/mighty-express-cuoc-dua-tau-lua" title="Mighty Express: Cuộc đua tàu lửa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-sinh-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mighty-express-cuoc-dua-tau-lua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Chiến Sinh Tử
+             Mighty Express: Cuộc đua tàu lửa
             </span>
             <span class="list-top-movie-item-en">
-             Black★Rock Shooter
+             Mighty Express: Mighty Trains Race
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
