add new website from server na

--- a/xem-phim-bo/lap-harem-chon-me-cung-o-di-gioi/index.html
+++ b/xem-phim-bo/lap-harem-chon-me-cung-o-di-gioi/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1663,18 +1663,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/suot-dip-giang-sinh" title="Suốt dịp Giáng sinh">
+          <a class="list-top-movie-link" href="/phim-moi/ban-khong" title="Bán khống">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/suot-dip-giang-sinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-khong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Suốt dịp Giáng sinh
+             Bán khống
             </span>
             <span class="list-top-movie-item-en">
-             Over Christmas
+             The Big Short
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1685,18 +1685,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-mua-he" title="Đêm mùa hè">
+          <a class="list-top-movie-link" href="/phim-moi/the-asadas" title="The Asadas">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-mua-he-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-asadas-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đêm mùa hè
+             The Asadas
             </span>
             <span class="list-top-movie-item-en">
-             Midsummer Night
+             The Asadas
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1707,40 +1707,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hay-nghe-toi-rap-ss2" title="Hãy Nghe Tôi RAP SS2">
+          <a class="list-top-movie-link" href="/phim-moi/man-dem-buong-xuong" title="Màn Đêm Buông Xuống">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hay-nghe-toi-rap-ss2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/man-dem-buong-xuong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hãy Nghe Tôi RAP SS2
+             Màn Đêm Buông Xuống
             </span>
             <span class="list-top-movie-item-en">
-             Hãy Nghe Tôi RAP SS2
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-ba-tam-phan-5" title="Hội Bà Tám (Phần 5)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-ba-tam-phan-5-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hội Bà Tám (Phần 5)
-            </span>
-            <span class="list-top-movie-item-en">
-             Gossip Girl (Season 5)
+             It Comes At Night
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1751,21 +1729,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/captain-america-ke-bao-thu-dau-tien" title="Captain America: Kẻ Báo Thù Đầu Tiên">
+          <a class="list-top-movie-link" href="/phim-moi/double-fixation" title="Double Fixation">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/captain-america-ke-bao-thu-dau-tien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/double-fixation-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Captain America: Kẻ Báo Thù Đầu Tiên
+             Double Fixation
             </span>
             <span class="list-top-movie-item-en">
-             Captain America: The First Avenger
+             Double Fixation
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sat-thu-van-phong" title="Sát Thủ Văn Phòng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sat-thu-van-phong-2012-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sát Thủ Văn Phòng
+            </span>
+            <span class="list-top-movie-item-en">
+             A Company Man
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
